--- a/index.html
+++ b/index.html
@@ -3,21 +3,17 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no" />
-    <link rel="shortcut icon" href="./src/assets/Icon.png" /> 
-    <title>前端小智</title>
+	<link rel="icon" type="image/x-icon" href="static/Icon.png">
+    <title>前端小智 » 百灵鸟的个人博客</title>
 	<meta name="apple-mobile-web-app-capable" content="yes" />
 	<meta name="format-detection" content="telephone=no" />
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
 	<meta name="description" content="这是个人学习Vue后自己搭建的个人博客">
 	<meta name="keywords" content="前端小智 个人博客 Vue博客">
-	<meta name="author" content="yongsonglee.top 前端小智">
-    <!-- <script src="https://cdn.tiny.cloud/1/zz6kufduyz69ewv614r0rudtr2snd9pr3bzyeignjc1tgn5e/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script> -->
+	<meta name="author" content="yongsonglee.top 前端小智 » 百灵鸟的个人博客 ">
   </head>
   <body>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
-
-    
   </body>
   <script>
 	  (function(){
